crates/swc/tests/stacktrace/issue-1796/es5/output/stacks.txt
$DIR/tests/stacktrace/issue-1796/es5/input/index.js:3
        throw new Error('Boom');
        ^


Error: Boom
    at <anonymous> ($DIR/tests/stacktrace/issue-1796/es5/input/index.js:3:15)
    at Error ($DIR/tests/stacktrace/issue-1796/es5/input/index.js:4:5)
    at Object.<anonymous> ($DIR/tests/stacktrace/issue-1796/es5/input/index.js:5:1)
    at node:internal/main/run_main_module:23:47
